# midi_player

./: .gitignore  Cargo.toml  baba.mid  basic.mid  egg.wav.asd  kingdom.mid  kingdom_basic.mid  one.mid  push.mid  sampler_bank.json  sampler_bank_kingdom.json  sampler_bank_melody.json  sampler_bank_one.json  sampler_bank_tod.json  silence.mid  simple.mid  tod.mid
example_player/src/: main.rs
src/: lib.rs  main.rs  midi.rs  sampler.rs
test_samples/current/bass/: c1.mp3.asd  c1.wav.asd  c2.mp3.asd  c2.wav.asd  c3.mp3.asd  c3.wav.asd
test_samples/current/bass_clarinet/: c1.mp3.asd  c1.wav.asd  c2.mp3.asd  c2.wav.asd  c3.mp3.asd  c3.wav.asd
test_samples/current/bell/: c2.mp3.asd  c2.wav.asd  c3.mp3.asd  c3.wav.asd  c4.mp3.asd  c4.wav.asd
test_samples/current/brass/: c2.mp3.asd  c2.wav.asd  c3.mp3.asd  c3.wav.asd  c4.mp3.asd  c4.wav.asd
test_samples/current/flute/: c2.mp3.asd  c2.wav.asd  c3.mp3.asd  c3.wav.asd  c4.mp3.asd  c4.wav.asd
test_samples/current/harp/: c2.mp3.asd  c2.wav.asd  c3.mp3.asd  c3.wav.asd  c4.mp3.asd  c4.wav.asd
test_samples/current/piano/: c2.mp3.asd  c2.wav.asd  c3.mp3.asd  c3.wav.asd  c4.mp3.asd  c4.wav.asd
test_samples/current/strings/: c2.mp3.asd  c2.wav.asd  c3.mp3.asd  c3.wav.asd  c4.mp3.asd  c4.wav.asd
test_samples/current/trumpet/: c3.mp3.asd  c3.wav.asd  c4.mp3.asd  c4.wav.asd  c5.mp3.asd  c5.wav.asd
test_samples/current/violin/: c3.mp3.asd  c3.wav.asd  c4.mp3.asd  c4.wav.asd  c5.mp3.asd  c5.wav.asd
test_samples/current/voice/: c2.mp3.asd  c2.wav.asd  (+4 more)
test_samples/synth/: c4.mp3.asd  c4.wav.asd  c5.mp3.asd  c5.wav.asd
(+21 files in other folders)
