[package]
name = "rusty_sample_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
cpal = "0.14.0"
wav = "1.0.0"
nodi = "0.19.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
rubato = "0.12.0"
ringbuf = "0.2.8"
chrono = "0.4.22"
timer = "0.2.0"
log = "0.4.17"
env_logger = "0.9.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"