[package]
name = "midi_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
midly = "0.5.2"
ringbuf = "0.2.8"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
itertools = "0.10.5"